#######################################################################
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Project configurations by Hanh Nguyen
#######################################################################
[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"


# Basic information
[project]
name = "jpaye"
description = "Python Lib Locator"
requires-python = ">=3.10"
keywords = ["Python", "Library", "Locator"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

authors = [
  { name="Hanh Nguyen", email="hanhnguyenvan@gmail.com" },
]
maintainers = [
  {name = "Hanh Nguyen", email = "hanhnguyenvan@gmail.com"},
]


[project.scripts]

[project.urls]
"Homepage" = "https://github.com/hahn80/jpaye"
"Bug Tracker" = "https://github.com/hahn80/jpaye/issues"

[project.optional-dependencies]
test = ["pytest", "faker"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.distutils.bdist_wheel]
plat-name = "linux_x86_64"
python-tag = "py3"
universal = 0

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
"jpaye.libs" = ["*.so"]

[tool.setuptools.exclude-package-data]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--capture=no"
testpaths = ["src/tests"]
